# mackey

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
ci/: e2e.ps1
installer/: mackey.iss
res/: app.manifest  app.rc
src/: autostart.rs  engine.rs  foreground.rs  hook.rs  main.rs  mapping.rs  tray.rs
tools/: gen_icons.py
