[package]
name = "mackey"
version = "0.2.1"
edition = "2021"
description = "Make a Windows keyboard behave like macOS (Alt = Cmd, Win = Option)"
build = "build.rs"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Graphics_Gdi",
] }

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
